--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>itskme web calculator</h1>
         <form>
           <input type="text" id="display" readonly>
+          <div class="buttonss">
           <table>
             <tr>
               <td><button type="button" class="num" value="7">7</button></td>
@@ -38,6 +39,7 @@
               <td colspan="3"><button type="button" id="clear" value="C">CLR</button></td>
             </tr>
           </table>
+        </div>
         </form>
       </div>
 
