rudamentary deark mode functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>itskme web calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light-mode">
+<button id="dark-mode-toggle" aria-label="Toggle dark mode">dark/light</button>
     <div class="calculator">
         <h1>itskme web calculator</h1>
         <form>
